2004-10-13  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/tmpl/gstobject.sgml:
	* docs/gst/tmpl/gstplugin.sgml:
	* docs/gst/tmpl/gstpluginfeature.sgml:
	* docs/gst/tmpl/gstregistry.sgml:
	* docs/gst/tmpl/gstversion.sgml:
	* gst/gstbin.c:
	  more api documentation
	* gst/gstplugin.c: (gst_plugin_register_func),
	(gst_plugin_check_file), (gst_plugin_load_file):
	  better error signaling and logging

2004-10-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/gstqueue.c: (gst_queue_init), (gst_queue_handle_src_query):
	  Subtract current queue contents from position queries.

2004-10-11  Johan Dahlin  <johan@gnome.org>

	* gst/gsturi.c (gst_uri_get_location): unescape string
	(gst_uri_construct): escape string.

2004-10-11  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_renegotiate), (gst_pad_try_set_caps),
	(gst_pad_try_set_caps_nonfixed):
	  allow renegotiation of unconnected pads (as inside spider). Simply
	  return OK if unconnected - mimic try_set_caps there.

2004-10-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/gstbin.c: (gst_bin_sync_children_state):
	  Add missing break.

2004-10-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/elements/gstfakesrc.c: (gst_fakesrc_get):
	Set element to EOS before sending EOS event

2004-10-08  Wim Taymans  <wim at fluendo dot com>

	* gst/elements/gsttypefindelement.c:
	(gst_type_find_element_handle_event):
	Handle EOS events when doing the transition from
	typefind to data passing. This should fix the
	infinite loops in short files.

2004-10-07  Wim Taymans  <wim at fluendo dot com>

	* gst/gstthread.c: (gst_thread_change_state),
	(gst_thread_child_state_change):
	Make sure no iteration happens while performing
	the state change as it could mess up the internal
	consistency of the thread state.

2004-10-07  Wim Taymans  <wim at fluendo dot com>

	* gst/gstthread.c: (gst_thread_dispose), (gst_thread_sync),
	(gst_thread_change_state), (gst_thread_child_state_change):